src/test/ui/impl-trait/issues/issue-87295.stderr
error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/issue-87295.rs:16:31
   |
LL |     let _do_not_waste: Struct<impl Trait<Output = i32>> = Struct::new(());
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0562`.
